@@ -1,3 +1,6 @@
+2009-12-12
+    * French and German translations updated
+    
 2009-12-10
     * show drums channel note names 
 
